CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( Actor )

# Boost
FIND_PACKAGE( Boost REQUIRED COMPONENTS )
IF ( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
ENDIF()

INCLUDE_DIRECTORIES( src )

# Example

ADD_EXECUTABLE( example01 "example/example01.cpp" )

ADD_EXECUTABLE( example02 "example/example02.cpp" )


IF( WITH_TEST )
	ADD_SUBDIRECTORY( test )
ENDIF()
